--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -105,7 +105,7 @@ The life-cycle of an OWF can be broken up into three phases: installation, maint
 
 The structure of maintenance projects is completely different. Scheduling maintenance has to be done significantly in advance, as the vessels used need to be reserved. For this reason simply reacting to failures on the site would mean it can take a long time before a failure is repaired. It is also costly, meaning maintenance trips which would have been unnecessary are undesirable as well. These two factors mean a balance needs to be struck between not spending too much on maintenance, and maintaining high uptime on the structures of the site (especially OSPs being offline can lead to massive losses in profit). 
 
-The stochasticity of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost or the earlier expected end time. But the specific goal depends on the wishes of the executing company and project details. For example, some compaiesy may want at least 95\% certainty that the project is complete (or complete up to some milestone) by a given deadline, or some certainty that the costs do not exceed a given threshold. Therefore the probability distribution of the cost and duration of a resulting schedule are important to determining the value of that schedule. Additionally it is worth noting that while the end time of a schedule and the cost are strongly related, there are scenarios in which it is more profitable to halt the operations for a number of months, especially the winter months where there will be more days with weather too extreme to perform operations in. While this break would obviously postpone the total completion of the schedule, not having to pay rent for vessels over these months in which they cannot perform optimally might lead to a higher net profit over all, especially if a part of the windfarm is already operational and generating energy over these months. 
+The stochastic nature of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost or the earlier expected end time. But the specific goal depends on the wishes of the executing company and project details. For example, some compaiesy may want at least 95\% certainty that the project is complete (or complete up to some milestone) by a given deadline, or some certainty that the costs do not exceed a given threshold. Therefore the probability distribution of the cost and duration of a resulting schedule are important to determining the value of that schedule. Additionally it is worth noting that while the end time of a schedule and the cost are strongly related, there are scenarios in which it is more profitable to halt the operations for a number of months, especially the winter months where there will be more days with weather too extreme to perform operations in. While this break would obviously postpone the total completion of the schedule, not having to pay rent for vessels over these months in which they cannot perform optimally might lead to a higher net profit over all, especially if a part of the windfarm is already operational and generating energy over these months. 
 
 %TODO: For the cites, look at sources and where they got it from; citing directly leads me to more (varied) sources
 
@@ -253,7 +253,7 @@ In the above literature, two main types of methods are used for this problem; op
 \bigskip
 
 \subsubsection{Simulation} \label{sss:sim}
-Simulation, especially Discrete Event Simulation, is a common and effective method to evaluate the strength of a proposed schedule under uncertain circumstances. If enough simulations are run, an accurate view of the realistic duration of a schedule can be gained. This does not only mean expected (average) duration, but also for example a confidence interval for the extreme cases. This does however have two important bottlenecks; the information gained through simulation can only be as precise as the weather model used for it, and doing enough simulations can take considerable time. 
+Simulation, especially Discrete Event Simulation, is a very broadly used method in computational analysis \cite{law2000simulation,robinson2010conceptual} . It is often used to evaluate the strength of a proposed layout or schedule under uncertain circumstances. If enough simulations are run, an accurate view of the realistic duration of a schedule can be gained. This does not only mean expected (average) duration, but also for example a confidence interval for the extreme cases. This does however have two important bottlenecks; the information gained through simulation can only be as precise as the weather model used for it, and doing enough simulations can take considerable time. 
 
 \bigskip
 
@@ -276,7 +276,7 @@ There are many other possible methods to reduce number of simulations required, 
 \bigskip
 
 \subsubsection{Optimisation} \label{ss:opt}
-Optimisation, in particular through (mixed-)integer programming, is an essential tool in problems like this, and is used extensively in the literature. Linear programming and integer programming is preferred as mixed-integer programming is computationally much more complex to solve, therefore mixed-integer models are restricted in size in order to be solved in feasible time. However, both methods are used in the literature.
+Optimisation, in particular through (mixed-)integer programming, is an essential tool in problems like this, and is used extensively in the literature \cite{nemhauser1999integer,lee2011mixed}. Linear programming and integer programming is preferred as mixed-integer programming is computationally much more complex to solve, therefore mixed-integer models are restricted in size in order to be solved in feasible time. However, both methods are used in the literature.
 
 Even linear and integer programming models computationally complex to solve, hence many methods are used to reduce to complexity of the models. There are standard techniques like Lagrangian relaxation \cite{fisher1981lagrangian} and column generation \cite{barnhart1998branch}, but there are more specific methods used as well. The primary way this is done is by limiting the scope of individual optimisation problems (not necessarily the research), by splitting up the research and using multi-level optimisation models, or using simulation for certain parts of it. 
 
