--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -297,3 +297,34 @@
   year={2010},
   publisher={Springer}
 }
+
+@incollection{nemhauser1999integer,
+  title={Integer programming and combinatorial optimization},
+  author={Nemhauser, George and Wolsey, L},
+  booktitle={Wiley, 1988},
+  year={1999},
+  publisher={Springer}
+}
+
+@book{lee2011mixed,
+  title={Mixed integer nonlinear programming},
+  author={Lee, Jon and Leyffer, Sven},
+  volume={154},
+  year={2011},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{law2000simulation,
+  title={Simulation modeling and analysis},
+  author={Law, Averill M and Kelton, W David and Kelton, W David},
+  volume={3},
+  year={2000},
+  publisher={McGraw-Hill New York}
+}
+
+@book{robinson2010conceptual,
+  title={Conceptual modeling for discrete-event simulation},
+  author={Robinson, Stewart and Brooks, Roger and Kotiadis, Kathy and Van Der Zee, Durk-Jouke},
+  year={2010},
+  publisher={CRC Press}
+}
