--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -328,3 +328,40 @@
   year={2010},
   publisher={CRC Press}
 }
+
+@article{irawan2019optimisation,
+  title={An optimisation model for scheduling the decommissioning of an offshore wind farm},
+  author={Irawan, Chandra Ade and Wall, Graham and Jones, Dylan},
+  journal={OR Spectrum},
+  volume={41},
+  number={2},
+  pages={513--548},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{leontarisprobabilistic,
+  title={Probabilistic decision support for offshore wind operations},
+  author={Leontaris, Georgios and Morales-N{\'a}poles, Oswaldo and Wolfert, ARM Rogier}
+}
+
+@article{leontaris2019decision,
+  title={Decision support for offshore asset construction using expert judgments for supply disruptions risk},
+  author={Leontaris, Georgios and Morales-N{\'a}poles, Oswaldo and Dewan, Ashish and Wolfert, ARM Rogier},
+  journal={Automation in Construction},
+  volume={107},
+  pages={102903},
+  year={2019},
+  publisher={Elsevier}
+}
+
+@article{staalhane2019optimizing,
+  title={Optimizing vessel fleet size and mix to support maintenance operations at offshore wind farms},
+  author={St{\aa}lhane, Magnus and Halvorsen-Weare, Elin E and Non{\aa}s, Lars Magne and Pantuso, Giovanni},
+  journal={European Journal of Operational Research},
+  volume={276},
+  number={2},
+  pages={495--509},
+  year={2019},
+  publisher={Elsevier}
+}
