Added EJOP references and small paragraphs

--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -213,14 +213,26 @@ Compared to the topic of installation, there is a large body of research done in
 
 Within each of these echelons, various areas of research are identified. Strategic decisions are found to have the biggest impact on the costs of operations, which makes sense as they affect the largest amount of time. However each of these echelons include important decisions that will have to be made for the maintenance of the sites. 
 
+One aspect to consider is fleet size. In \cite{staalhane2019optimizing} a two-stage stochastic programming model is used to first determine which vessels to charter, and then how to use the cartered vessels. In their computational study this approach is compared to several life-cycle cost estimating simulation models from the literature, and it is found to give reasonable estimates on the resulting costs. Additionally it is shown to require relatively low computational power, and can therefore be used to support maintenance decisions made. 
+
 With the large amount of research done, and the variety of subjects within this field, I have yet to read much more about the current state of most subjects. This will be my immediate focus from here on, as described in more detail in \Cref{s:concl}.
 
 \subsubsection{Related research regarding offshore projects} \label{sss:offsh}
+While there is not much research relating specifically to decommission projects, there is some. Especially recently there has been new research such as \cite{irawan2019optimisation}. In it the researchers use an Integer Linear Programming method to find schedules for decommission projects with minimum costs. The method is shown to be efficient and seems to yield good results. As expected, this model is fairly similar to the ones used for installation projects. 
+
+\bigskip
+
 A group of researchers at my department, whose research \cite{barlow2018mixed} I have already described in \Cref{sss:sched}, have developed a simulation tool with which various logistical decisions for the installation of an OWF have been explored. In \cite{barlow2014support} the number of installation vessels and supply barges is experimented with, as well as their relative release dates. These simulations consider only the installation of OSPs and not WTGs. There are several measures considered for the quality of a setup such as the total cost of the project and the completion dates of the first and last OSPs, as well as the uncertainty of those measures (shown through the median and 90\% confidence interval for these measures, resulting from 100 simulations). 
 
 In \cite{barlow2014assessment} the same tool is used to compare several types of installation vessels. Simulations are run with vessels varying in four measures; number of WTGs it is able to carry at once, transition speed, maximum wave height for transitioning and maximum wave height during jacking operations. The values tested range from current vessels to expected vessels available in the near future. The transitioning speed is the only measure which seems to yield continuing improvement; the other three measures have clear diminishing returns and improvement beyond vessels currently available is unlikely to be worth it (given that newer vessels will have a higher cost). A criticism of this research is that all measures are tested in isolation, while three of the four measures are directly related the number or length of transits between the port and the OWF site. It is clear that the average transitioning speed matters less when the capacity is high enough to limit the number of transitions. However, the simulation tool used for this is capable of simulating those vessels, so if used to support decisions in an actual installation project the potential vessels used can be compared. 
 
 In \cite{barlow2017using}, the final paper (so far) on this tool, they go a bit more in depth on the tool and simulation as a method for supporting decisions in these projects. They talk about how the model was constructed and how after each round of improvements the model was validated with industry partners to ensure its accuracy. Some experiments are also discussed, the first being a simple simulation of the installation of a fictional OWF over 1000 weather series. The costs and duration of each segment of operations are analysed, and it is shown to be desirable to reduce any uncertainty as distribution of costs has a long tail. The standard deviation is \pounds 11.80M (approximately 5\% of the \pounds 233.89M median cost) so reducing uncertainty could lead to saving significant amounts of money. Then experiments with different number of supply barges are performed for the WTG jacket phase of the installation. A scenario is set up where these operations start a full year after the preceding phase of laying the foundations to ensure no delay is caused by that. Two sets of experiments are done, one with a single installation vessel and one with two installations vessels. For both scenarios similar patterns are found in the result; for the costs, there is an optimal minimum and increasing the number of supply barges from there slowly increases cost. The duration of the installation tends to only decrease very slowly from that optimal minimum as well. The statistical significance of their results are also tested, and some differences are found not to be statistically relevant. Finally, the impact of the relative starting dates of piling the foundations and starting jacket operations are explored. The start of laying the foundations is fixed at April 1st to optimally make use of the summer weather conditions. If the jacket operations would start at the same moment, there would be a lot of waiting and delays since the foundations for a specific WT need to be completed before the jacking operations can begin. This increases costs, so delaying the start of these latter operations is beneficial. A good amount of delay found is about 90 days, as waiting longer means more severe winter weather conditions. However, if it is possible to wait out the winter and delay operations about 420 days the total cost can be minimised as waiting this long means there are no delays due to waiting for the foundations, and making optimal use of summer weather conditions. The downside of this is a significant increase in makespan of the entire project. The OWF developer will have to decide between these options. For a different OWF the actual values will obviously differ, but similar patterns could be found. All in all, this tool is shown to be powerful and useful for logistical decisions related to the installation projects. 
+
+\bigskip
+
+In a very recent work \cite{leontaris2019decision}, researchers have looked into reducing the risk of supply disruptions. Due to the absance of sufficient historical data, they use expert judgement to analyse the rist of supply disruptions, using different weights to combine judgements from various experts. It was found that the combined judgement lead to a better outcome than any individual judgement, and in general it was found that disregarding the supply disruptions from estimations regarding offshore construction projects could lead to significant overruns in both schedule and budget. 
+
+The same authors have written about including dependencies between task duration \cite{leontarisprobabilistic}. They use a non-parametric Bayesian Network to model dependant delays in task duration, so that if a vessel has a delay on a certain task, the task it performs afterwards has a higher chance to be delayed as well. So far they have only tested this technique with the main tasks for installation, but this technique could be used throughout all operations. 
 
 \bigskip
 
@@ -350,13 +362,13 @@ As mentioned in \Cref{sss:maint} significant additional reading will have to be 
 
 \subobjthree*
 
-This model should be similar in structure to that created for the first sub-objective. However, the restrictions may be fairly different. Cost-effectiveness is still important, but there may be many more hard restrictions based on government regulations. These will be the restrictions to ensure the project is completed before a certain deadline, as otherwise a later start for the decomission might be more cost-effective. Therefore these projects will hold their own difficulties and are significantly different from installation projects. 
+This model should be similar in structure to that created for the first sub-objective. However, the restrictions may be fairly different. Cost-effectiveness is still important, but there may be many more hard restrictions based on government regulations. These will be the restrictions to ensure the project is completed before a certain deadline, as otherwise a later start for the decommission might be more cost-effective. Therefore these projects will hold their own difficulties and are significantly different from installation projects. 
 
 \objectve*
 
 After each of the sub-objectives is completed, I will aim to integrate the resulting models into one big model spanning the entire life-cycle of the OWF. The different models and their interactions are shown in Figure~\ref{f:interact}. Each of the three phases of the model has a corresponding integrated model, where the inner optimisation and simulation models work together. This interaction is effectively the same for each of the phases. On a higher level, the models for each of the phases interact with each other in specific ways. 
 
-Installation and maintenance partially overlap in time, and therefore have a significant impact on each other. The scheduling of routing and time at ports for installation and maintenance vessels may benefit from being done together, and only the assets that have been installed require maintenance. Maintenance and decommission affect each other in a very similar way, as they too overlap in time. The direct influence is that near the end of the life-cycle, it may not be cost-effiecient to maintain or repair an asset if it is to be decommissioned shortly after. Finally, installation affects decomission in more intricate ways. These phases do not overlap in time, but since the installation phase can take several years, some WTs may be years older than other WTs. This can affect maintenance, but also decomission as it may be cost-efficient to decomission the WTs that are oldest first. However, there is more that affects this, as the maintenance on each individual asset can also influence the most cost-effective order of decomissioning. 
+Installation and maintenance partially overlap in time, and therefore have a significant impact on each other. The scheduling of routing and time at ports for installation and maintenance vessels may benefit from being done together, and only the assets that have been installed require maintenance. Maintenance and decommission affect each other in a very similar way, as they too overlap in time. The direct influence is that near the end of the life-cycle, it may not be cost-effiecient to maintain or repair an asset if it is to be decommissioned shortly after. Finally, installation affects decommission in more intricate ways. These phases do not overlap in time, but since the installation phase can take several years, some WTs may be years older than other WTs. This can affect maintenance, but also decommission as it may be cost-efficient to decommission the WTs that are oldest first. However, there is more that affects this, as the maintenance on each individual asset can also influence the most cost-effective order of decommissioning. 
 
 \begin{figure}[h]
 \includegraphics[width = \textwidth]{OWF Tool interactions}
