--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -101,11 +101,11 @@ My project is about optimising all sorts of logistical decisions regarding offsh
 \subsection{Logistical decisions on offshore windfarms} \label{ss:logdec}
 A typical offshore windfarm (OWF) will have two types of structures: Wind Turbine Generators (WTGs) and Offshore Substation Platforms (OSPs). The WTGs are the actual turbines generating energy, and the OSPs are hubs where the power generated in the WTGs is gathered and transformed before being transported to shore. Between these structures are many cables, connecting the WTGs to the OSPs, generally with a number of sets of WTGs connected serially. Then from each OSP there are specialized cables back to shore. A typical OWF currently in development might have upwards of 100 WTGs and 2 OSPs \cite{ruk2017,barlow2018mixed}. 
 
-The life-cycle of an OWF can be broken up into three phases: installation, maintenance and decommissioning. Installation and decommissioning are similar; a set of tasks needs to be completed in a cost effective way. The primary difference is the reversed order of the tasks. For each of the structures there is a set of tasks that need to be completed in series for each individual structure, such as (for installation): preparing the sea surface, laying the foundation, installing the structure and laying the cables (each of these tasks may be split into more tasks such as loading, transport and installation) \cite{kerkhove2017optimised}. Within the group of tasks for a structure, most tasks will have to be performed in a specific order, while the tasks for separate structures can be completed in any order. This is essential for some of the more sophisticated objective functions used in the literature; if one OSP and a set of WTGs connected to it are active, they can start generating power while the rest of the wind farm is still under construction \cite{barlow2017using}. This is often a contractual requirement imposed by the government, and it would also mean the farm starts making money significantly earlier, and can therefore have significant impacts on desired schedules. In some situations the company might even have contractually or legally enforced deadlines for certain milestones, like 10\% or 50\% of the WTGs being operational. 
+The life-cycle of an OWF can be broken up into three phases: installation, maintenance and decommissioning. Installation and decommissioning are similar in structure; a fixed set of tasks needs to be completed in a cost effective way. The primary difference is the reversed order of the tasks. For each of the structures there is a set of tasks that need to be completed in series for each individual structure, such as (for installation): preparing the sea surface, laying the foundation, installing the structure and laying the cables (each of these tasks may be split into more tasks such as loading, transport and installation) \cite{kerkhove2017optimised}. Within the group of tasks for a structure, most tasks will have to be performed in a specific order, while the tasks for separate structures can be completed in any order. This is essential for some of the more sophisticated objective functions used in the literature; if one OSP and a set of WTGs connected to it are active, they can start generating power while the rest of the wind farm is still under construction \cite{barlow2017using}. This is often a contractual requirement imposed by the government, and it would also mean the farm starts making money significantly earlier, and can therefore have significant impacts on desired schedules. In some situations the company might even have contractually or legally enforced deadlines for certain milestones, like 10\% or 50\% of the WTGs being operational. 
 
-The structure of maintenance projects is completely different. Scheduling maintenance has to be done significantly in advance, as the vessels used need to be reserved. For this reason simply reacting to failures on the site would mean it can take a long time before a failure is repaired. It is also costly, meaning maintenance trips which would have been unnecessary are undesirable as well. These two factors mean a balance needs to be struck between not spending too much on maintenance, and maintaining high uptime on the structures of the site (especially OSPs being offline can lead to massive losses in profit). 
+The structure of maintenance projects is completely different. The set of tasks in not fixed, ideally maintenance would only be performed the day before an asset was about to fail. However, this is impossible to predict, and due to long lead up times of renting maintenance vessels waiting for an asset to fail will cause long periods of downtime. Scheduling maintenance has to be done significantly in advance. It is also costly, meaning maintenance trips which would have been unnecessary are undesirable as well. These two factors mean a balance needs to be struck between not spending too much on maintenance, and maintaining high uptime on the structures of the site (especially OSPs being offline can lead to massive losses in profit). 
 
-The stochastic nature of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost or the earlier expected end time. But the specific goal depends on the wishes of the executing company and project details. For example, some compaiesy may want at least 95\% certainty that the project is complete (or complete up to some milestone) by a given deadline, or some certainty that the costs do not exceed a given threshold. Therefore the probability distribution of the cost and duration of a resulting schedule are important to determining the value of that schedule. Additionally it is worth noting that while the end time of a schedule and the cost are strongly related, there are scenarios in which it is more profitable to halt the operations for a number of months, especially the winter months where there will be more days with weather too extreme to perform operations in. While this break would obviously postpone the total completion of the schedule, not having to pay rent for vessels over these months in which they cannot perform optimally might lead to a higher net profit over all, especially if a part of the windfarm is already operational and generating energy over these months. 
+The stochastic nature of the project also comes with various challenges. Naively one would perhaps go for the schedule with the lowest expected cost or the earlier expected end time. But the specific goal depends on the wishes of the executing company and project details. For example, some company may want at least 95\% certainty that the project is complete (or complete up to some milestone) by a given deadline, or some certainty that the costs do not exceed a given threshold. Therefore the probability distribution of the cost and duration of a resulting schedule are important to determining the value of that schedule. Additionally it is worth noting that while the end time of a schedule and the cost are strongly related, there are scenarios in which it is more profitable to halt the operations for a number of months, especially the winter months where there will be more days with weather too extreme to perform operations in. While this break would obviously postpone the total completion of the schedule, not having to pay rent for vessels over these months in which they cannot perform optimally might lead to a higher net profit over all, especially if a part of the windfarm is already operational and generating energy over these months. 
 
 %TODO: For the cites, look at sources and where they got it from; citing directly leads me to more (varied) sources
 
@@ -120,7 +120,7 @@ The explicit research objective is:
 
 \begin{restatable}{objective}{objectve}
 \label{objectve}
-Create an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on sub-models for each phase of the life-cycle.
+Design an integrated optimisation and simulation model spanning the entire life-cycle of an Offshore Wind Farm, based on sub-models for each phase of the life-cycle.
 \end{restatable}
 
 The primary motivation for this objective is that in the literature the three phases of the life-cycle are each treated seperately, while they might heavily influence each other. There is a large amount of research done on the maintenance projects, and quite a bit on installation projects as well, while decommissioning projects are less well researched. Treating these phases as separate is often beneficial, but some insight about how they influence each other is also valuable. The decision that impacts all future decisions most clearly is the layout of the site, as this affects the distance and travel times between the assets during all other operations. Therefore the tool will be able to take in different layouts and thereby experiment with them. However, the main focus of this project is on scheduling, where the different phases also affect each other. A clear way to demonstrate this is by showing that the phases are not entirely distinct; an installation projects can take several years to complete, but the first WTGs might be operational much earlier. That means the site is partly operational while other parts are still being installed. These operational parts might need maintenance before the installation is fully complete, and at the very least these early WTGs may need maintenance before the last WTG that was installed needs maintenance. Therefore the installation schedule impacts the maintenance schedule, and to my knowledge there is no other research exploring this effect. A similar effect appears at the end of the life-cycle, when the decommissioning project starts. Here the connection between maintenance and decommissioning may be even stronger, as it may not be cost-effective to conduct maintenance on a WTG shortly before that WTG is decommissioned. Conversely one may want to schedule the decommissioning of a WTG that recently has had maintenance later than that of a WTG which is likely to need maintenance soon. How this exactly works out depends on the installation, maintenance and decommissioning policies, but it is clear that these decisions affect one another, and that is what I would like to research in this project. 
@@ -129,17 +129,17 @@ This objective has three sub-objectives:
 
 \begin{restatable}{subobjective}{subobjone}
 \label{subobjone}
-Create an integrated optimisation and simulation model for the installation projects of an OWF. 
+Design an integrated optimisation and simulation model for the installation projects of an OWF. 
 \end{restatable}
 
 \begin{restatable}{subobjective}{subobjtwo}
 \label{subobjtwo}
-Create an integrated optimisation and simulation model for the maintenance projects of an OWF. 
+Design an integrated optimisation and simulation model for the maintenance projects of an OWF. 
 \end{restatable}
 
 \begin{restatable}{subobjective}{subobjthree}
 \label{subobjthree}
-Create an integrated optimisation and simulation model for the decommissioning projects of an OWF. 
+Design an integrated optimisation and simulation model for the decommissioning projects of an OWF. 
 \end{restatable}
 
 As each of these three sub-objectives is already a sizable goal in itself, these models will likely be based on models from the literature. For the installation projects, I already have a fairly clear view of how I want to structure this model, as will be explained later in this report. Additionally, the decommissioning model will likely be similar to the installation model, as these projects are assumed to be similar in structure. 
@@ -150,11 +150,11 @@ After each of the sub-objectives is complete, the models need to be integrated i
 
 In addition to these research objectives, I aim to achieve some practical results during this research. I want to build a tool that can be used to help make logistical decisions, based on the above models. The tool should have multiple functions, highlighting either the optimisation or the simulation aspect of the model. For example, one could focus on the optimisation and generate some optimal schedule, given a set of parameters, or give the tool a schedule it should look for improvements on. Alternatively, the tool should be able to take in a schedule and explore statistical measures if this schedule was to be used in reality, providing insight into expected and plausible completion dates and costs of projects. 
 
-This tool is a core part of the project, as it can be used to validate the models and explore their strength. It will be used to make the research contribution of this project applicable to actual projects. Therefore I aim to acquire some realistic data on past projects on OWFs, and use them to validate the model and tool. Once this is done, the strength of the tool can be tested by exploring some scheduling policies. 
+This tool is a core part of the project, as it can be used to validate the models and explore their strength. It will be used to make the research contribution of this project applicable to actual projects. Therefore I aim to acquire some realistic data (or real data if possible) on past projects on OWFs, and use them to validate the model and tool. Once this is done, the strength of the tool can be tested by exploring some scheduling policies. 
 
 \bigskip
 
-Potential other objectives that might be explored later in this project are:
+Potential likely future research topics that might be explored later in this project are:
 
 \begin{itemize}
 \item Use the tool to research the layout of the OWF sites.
@@ -260,7 +260,7 @@ Another study looking into robust scheduling is \cite{goren2008robustness}. It c
 As for research about the theory of robust optimisation, \cite{iancu2013pareto} introduces the concept of Pareto efficiency, which has roots in economics and multi-objective optimisation. For a multi-objective problem a solution is Pareto efficient (or Pareto optimal) if any change that gives a better value in one objective function will lead to a worse value in at least one other objective function. For such problems, any desirable solution will be Pareto optimal, and all Pareto optimal solutions together form the Pareto barrier. In \cite{iancu2013pareto} the writers state that within robust optimisation problems there will be a set of solutions which perform optimally within all tested worst-case scenarios, the so called Robustly Optimal (RO) solutions. They then identify some of these RO solutions to be Pareto Robustly Optimal (PRO), which means no other RO solution performs better than the PRO solutions across all possible scenarios. Effectively, they say that RO is not a strong enough requirement for solutions, as in reality the worst-case scenario will not often happen, and a solution being RO says nothing about how that solution will perform in a scenario which is not the worst-case. They then provide a method to generate a PRO solution from any RO solution in a time complexity not greater than the time complexity of the original problem, thereby not significantly increasing the time complexity to finding the desired solution. This paper is a couple of years old now, and seems to have had an impact in the literature.
 
 \subsection{Methodology} \label{ss:meth}
-In the above literature, two main types of methods are used for this problem; optimisation and simulation. Often both are used together, either by tackling one part of the problem with simulation and another with optimisation (as in \cite{barlow2018mixed}), or by creating schedules with an optimisation model, which are then evaluated using simulation (as in \cite{kerkhove2017optimised}). In this sections the methods will be discussed in more detail, separate from the research they were used in. Other possible methods for problems of the kind we are looking at will also be discussed. 
+In the above literature, two main types of methods are used for this problem; optimisation and simulation. Often both are used together, either by tackling one part of the problem with simulation and another with optimisation (as in \cite{barlow2018mixed}), or by creating schedules with an optimisation model, which are then evaluated using simulation (as in \cite{kerkhove2017optimised}). In this section the methods will be discussed in more detail, separate from the research they were used in. Other possible methods for problems of the kind we are looking at will also be discussed. 
 
 \bigskip
 
@@ -297,6 +297,9 @@ Another method has been discussed before already; robust optimisation. As with s
 There are alternatives to computational programming. The most prominent is local search. A benefit of local search is that reasonably good results can often be found fairly quick, but this is connected to the main drawback of local search; it can often be difficult to get out of local optima. However, there is a lot of literature on local search and many variants designed to reduce its drawbacks. 
 
 Alternatively, evolutionary algorithms have been used for deterministic scheduling problems such as machine learning \cite{dorndorf1995evolution}. A good explanation of this technique for scheduling is given in \cite{cotta2007memetic}. While this technique seems to be fairly common in deterministic scheduling, not much research could be found in an uncertain setting. The exception is \cite{sevaux2002genetic} as discussed in \Cref{sss:stoch}. This research, although seemingly brief, gives quality results. Since there is no clear reason why evolutionary algorithms couldn't work well within an uncertain setting, this is a potential method to explore in the future. 
+
+\subsection{Integration of Simulation and Optimisation}
+Lorem Ipsum %TODO
 
 \pagebreak
 
